- Fix layout issues in iPhone + Safari - Change categorical screenshot to pie chart

--- a/stylesheets/ddstyle.css
+++ b/stylesheets/ddstyle.css
@@ -19,10 +19,12 @@
     margin-right: 20px;
 }
 #tryitnow .dcontent {
-    display: flex;
+    display: block;
 }
 #tryitnow .dicon {
     margin-right: 10px;
+    display: inline-block;
+    vertical-align: top!important;
 }
 #screenshots .dcontent {
     display: block;
